@@ -39,7 +39,7 @@ try {
 	$connection2->setAttribute(PDO::ATTR_DEFAULT_FETCH_MODE, PDO::FETCH_ASSOC);
 }
 catch(PDOException $e) {
-  echo $e->getMessage();
+  	echo $e->getMessage();
 }
 
 @session_start() ;
