@@ -591,6 +591,12 @@ Activities: added waiting list to staff full view of an activity
 User Admin: fixed application status display bug in application form edit
 	Edited file /modules/User Admin/applicationForm_manage_edit.php
 
+Messenger: added View Message Wall Link to homepage widget
+
+Attendance: fixed interface string bug
+
+
+
 v10.0.00
 --------
 i18n: added Urdu as inactive development language
